chore(release): bump to 2.1.0 + fold 2.0.1 changelog
User directive: 2.1.0 bump on both branches after cleanup.

- gradle.properties: mod_version 2.0.0 -> 2.1.0
- mods.toml: version 2.0.0 -> 2.1.0
- CHANGELOG.md: fold 2.0.1 entries into 2.1.0

All 284 tests pass. Aislop 100/100. Zero new dependencies.